# EducationalProject_Client

./: CMakeLists.txt
Client/: Client.cpp  Client.h  INetwork.cpp  INetwork.h  Log.cpp  Log.h  UnixClient.cpp  UnixClient.h  WinClient.cpp  WinClient.h  main.cpp
